✅ test(JsonUtils): refactor JsonUtilsTest for better maintainability
* remove unused autowired ObjectMapper and related setup
* remove empty constructors from test classes
* simplify large object test using String.repeat()
* update assertions to use getFirst() for list access